fixed equations overlap the menu

--- a/mytemplate.css
+++ b/mytemplate.css
@@ -17,6 +17,7 @@ article {
   box-shadow: 0 0 8px;
 }
 
+header * {z-index: 9999;}
 /***** nav *****/
 /* PC サイト */
 nav { position: fixed; top: 0; left: 0; width: 100%; height: 40px; background: #242655; } /*スクロールしないようにする*/
